--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,6 @@
 title: "hrmnjt.dev"
 ---
 
-This is a Quarto website.
+Contents
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+- [python on new mac](python-newmac.qmd)
