feat: going absolute minimal

--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,8 @@
 ---
-title: "hrmnjt.dev"
+title: ""
+listing:
+    type: table
+    sort-ui: false
+    filter-ui: false
+    sort: "date desc"
 ---
-
-Contents
-
-- [python on new mac](python-newmac.qmd)
