--- a/python-newmac.qmd
+++ b/python-newmac.qmd
@@ -1,4 +1,7 @@
-# commencing boot sequence
+---
+title: "commencing boot sequence"
+draft: true
+---
 
 Installing uv
 
@@ -9,8 +12,3 @@ added added uv to brewfile and did an update
 Installing quarto
 quarto already present using dmg
 installed quarto-nvim to have nvim work well with quarto
-
-# adosiajdosij
-
-
-
