chore: adding a test snippet to validate deployment

--- a/python-newmac.qmd
+++ b/python-newmac.qmd
@@ -12,3 +12,10 @@ added added uv to brewfile and did an update
 Installing quarto
 quarto already present using dmg
 installed quarto-nvim to have nvim work well with quarto
+
+
+# test changes
+
+Will this appear when I deploy next?
+
+Lets see.
