post: added first post for blog

--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,9 @@
 title: ""
 listing:
     type: table
+    fields: 
+      - title
+      - date
     sort-ui: false
     filter-ui: false
     sort: "date desc"
